client/src/styles/global.scss
/*
  These are necessary for the image and font urls referenced in the source
  files to resolve correctly.
*/
$theme-image-path: "../../node_modules/uswds/src/img";
$theme-font-path: "../../node_modules/uswds/src/fonts";

/*
  Example:

  The url for the hero image in the source file is not currently prefixed by
  the $theme-image-path above.

  $theme-hero-image: '#{$theme-image-path}/hero.png';
*/

// Custom USWDS changes to variables go here
// see https://designsystem.digital.gov/documentation/settings/
$theme-show-compile-warnings: false;
$theme-show-notifications: false;

$theme-font-role-heading: "sans";

@import "../../node_modules/uswds";

@import "~@trussworks/react-uswds/lib/index.css";

// Custom SASS/CSS goes here
$j40-max-width: 80ex;

.j40-two-column {
  overflow: hidden;
  padding: 0;

  @media (min-width: 40em) {
    column-count: 2;
    column-gap: 1em;
  }
  @media (max-width: 40em) {
    column-count: 1;
    column-gap: 0;
  }
}

.j40-two-column > * {
  display: inline-flex;
  width: 90%;
  padding-bottom: 1.2em; /* space between items */
  padding-left: 1em;
}

.j40-two-column-icons-spacing {
  padding-right: 1em;
  width: 2.3em;
  max-width: revert;
}

.j40-two-column-confine {
  display: inline-flex;
  max-width: fit-content;
}

@include at-media("mobile-lg") {
  .j40-grid-container {
    padding-right: 0;
  }
}

.j40-header,
.j40-primary-nav,
.j40-header > li > a {
  color: #112f4e !important;
  z-index: 5;

  .usa-nav-container {
    max-width: ($j40-max-width * 2);
  }

  span {
    // make sure the open close chevron is colored correctly
    color: #112f4e;
  }

  // this is the title
  .usa-logo__text {
    font-size: 1.8em;
    font-family: "serif";
  }

  // menu item font
  .usa-nav__primary {
    font-size: 1.2em;
  }

  .byline {
    font-size: 0.3em;
    font-weight: normal;
  }
}

.j40-aside {
  background-color: #eff6fb;
  padding-right: 1em;
  padding-left: 1em;

  h2 {
    font-weight: 100;
    font-size: 2em;
  }

  h3 {
    font-weight: 100;
    font-size: 1.4em;
  }

  .j40-aside-icon {
    display: flex;
    margin-top: 3px;
    margin-bottom: 12px;
  }
}

.j40-footer {
  .usa-footer__contact-info {
    justify-content: center;
    line-height: 1.5;
    text-align: center;
  }

  .j40-footer-logo {
    display: inline-block;
    text-align: center;
  }
}

// spacing top & bottom around main content
.j40-main-content {
  @include at-media("mobile-lg") {
    margin-bottom: 2rem;
    margin-top: 2.5rem;
  }

  h1 {
    font-size: 2.13rem;
  }
  h2 {
    font-size: 1.46rem;
  }
}

// This should really be part of uswds and use $theme-step-indicator-segment-color-complete
// The Progress element doesn't really support color changing the line connecting progress
// (like the Steps element does) and the checkbox.
// The border-left-color required an !important to make work. Maybe add a feature request
// to have the process list officially support a more Steps-like behavior
.j40-usa-process-list__item--complete {
  &::before {
    color: white;
    background-color: #00a91c;
  }

  border-left-color: #005ea2 !important; // todo: fix
}

// NOTE: uswds `.usa-prose` defines these all as Merriweather Web via $theme-font-role-heading
.usa-prose {
  h1,
  h2,
  h3,
  h4 {
    font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial,
      sans-serif;
  }

  p,
  div {
    max-width: $j40-max-width;
  }
}

.j40-sitealert {
  p {
    margin: 0;
  }

  padding-top: 7px;
  padding-bottom: 7px;
  min-height: 4em;

  * + .usa-alert {
    margin: 0 !important;
  }
}

// Maplibre overrides
// Note that these need to be here to properly override defaults

.maplibregl-popup-close-button {
  font-size: 3em;
  margin-right: 12px;
  margin-top: 15px;
}

.maplibregl-popup-content {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5) !important;
  border-radius: 8px !important;
  pointer-events: all !important;
}

